working with newer Nano and permissions